--- a/ex.html
+++ b/ex.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>exceed</title>
+        <title>Exceed</title>
         <style>
             body {background-color: blue}
         </style>
